--- a/Jessica-1.0.0/index.html
+++ b/Jessica-1.0.0/index.html
@@ -206,7 +206,7 @@
   <section>
     <div class="container">
       <div class="banner rounded-4 p-5"
-        style="background-image: url(images/banner.png); background-size: cover ; background-repeat: no-repeat; background-position: center;">
+        style="background-image: url(images/bannerr.png); background-size: cover ; background-repeat: no-repeat; background-position: center;">
         <div class="text-content text-white py-5 my-5">
           <p class="fs-4">
             VFX / Graphics Head
@@ -413,7 +413,7 @@
   <section class="py-5">
     <div class="container">
       <div class="rounded-4 p-5"
-        style="background-image: url(images/section-banner.png); background-size: cover ; background-repeat: no-repeat; background-position: center;">
+        style="background-image: url(images/section-bannerr.png); background-size: cover ; background-repeat: no-repeat; background-position: center;">
         <div class="row">
           <div class="col-md-4">
             <div class="h-100 bg-black text-white p-4 rounded-4">
